--- a/Seminarska-SVZ/SVZ-TEX/main.tex
+++ b/Seminarska-SVZ/SVZ-TEX/main.tex
@@ -49,6 +49,20 @@ Pripravil sem si mesečni plan, za katerega menim, da mi bo omogočil doseči za
 
 Plan je sledeč: Trikrat tedensko bom izvajal treninge na "štangah" oz. fitnesu na prostem, kjer bom izvajal vaje za krepitev zgornjega dela telesa - to bojo večinoma prav zgibi ali pa različne variacije zgibov. Če mi bo vspelo po vsakih dveh treninhig izboljšati število zgibov za vsaj 1, bom v trinajstih zastavljenih treningih dosegel svoj cilj.
 
+\begin{center}
+  \textbf{\Large Tedenski plan vadbe}
+\end{center}
+
+\vspace{0.5cm}
+
+\begin{tabularx}{\textwidth}{|p{2.3cm}|p{0.5cm}|p{0.5cm}|p{2.3cm}|p{0.5cm}|p{2.3cm}|X|}
+  \hline
+  Pon & Tor & Sre & Čet & Pet & Sob & Ned \\
+  \hline
+  Štange Študentski domovi rožna dolina &  &  & Štange Študentski domovi rožna dolina & & Štange pri železniški postaji Nova Gorica & \\
+  \hline
+\end{tabularx}
+
 \subsubsection{Cilji v prehrani}
 Ker je prehrana zelo pomembna pri športni aktivnosti in pri regeneraciji in rasti mišič, sem si zadal tudi cilj, da bom v teh 30 dneh poskušal vsak dan zaužiti vsaj $130g$ beljakovin.
 
@@ -75,11 +89,56 @@ Bazalni metabolizem sem izračunal po Mifflin-St Jeorjevi formuli, ki izgleda ta
 BMR = 10 * weight + 6.25 * height - 5 * age + 5 
 \]
 
-kjer je $BMR$ bazni metabolizem (v $kcal$), $weight$ teža v kilogramih, $height$ višina v centimetrih, $age$ pa starost v letih. Po izračunu sem dobil vrednost $1900 kcal$.
+kjer je $BMR$ bazni metabolizem (v $kcal$), $weight$ teža v kilogramih, $height$ višina v centimetrih, $age$ pa starost v letih. Po izračunu sem dobil vrednost $1900 kcal$. Ta podatek bom uporabil pri računanju celotne porabe kalorij v dnevu. 
 
 \section{Rezultati in razlaga}
 
-\subsection{Rezultati v zvezi z močjo}
+\textbf{\Large Dnevnik prehrane in vadbe}
+
+\vspace{0.5cm}
+
+\begin{tabularx}{\textwidth}{|c|c|c|c|X|}
+  \hline
+  & \textbf{Obrok} & \textbf{Vnos kalorij} & \textbf{Vrsta in čas vadbe} & \textbf{Poraba kalorij} \\
+  \hline
+  \multirow{4}{*}{\textbf{Pon}} & Zajtrk & 442 & Trening na štangah & 2340 \\
+                                & Kosilo & 611 & ob 8:40 & \\
+                                & Večerja & 613 & & \\
+                                & Malica/e & 357 & & \\
+  \hline
+  \multirow{4}{*}{\textbf{Tor}} & Zajtrk & 439 & Fitness Push workout & 2411 \\
+                                & Kosilo & 882 & ob 17:00 & \\
+                                & Večerja & 614 & & \\
+                                & Malica/e & 192 & & \\
+  \hline
+  \multirow{4}{*}{\textbf{Sre}} & Zajtrk & 554 & Odbojka & 2194 \\
+                                & Kosilo & 736 & ob 18:00 & \\
+                                & Večerja & 658 & & \\
+                                & Malica/e & 882 & & \\
+  \hline
+  \multirow{4}{*}{\textbf{Čet}} & Zajtrk & 430 & Trening na štangah & 2243 \\
+                                & Kosilo & 891 & ob 15:05 & \\
+                                & Večerja & 610 & & \\
+                                & Malica/e & 199 & & \\
+  \hline
+  \multirow{4}{*}{\textbf{Pet}} & Zajtrk & 452 & / & 2099 \\
+                                & Kosilo & 635 & & \\
+                                & Večerja & 614 & & \\
+                                & Malica/e & 248 & & \\
+  \hline
+  \multirow{4}{*}{\textbf{Sob}} & Zajtrk & 451 & Trening na štangah & 2466 \\
+                                & Kosilo & 947 & ob 9:00 & \\
+                                & Večerja & 377 & & \\
+                                & Malica/e & 0 & & \\
+  \hline
+  \multirow{4}{*}{\textbf{Ned}} & Zajtrk & 555 & Tek v Panovcu & 2401 \\
+                                & Kosilo & 625 & ob 10:00 & \\
+                                & Večerja & 409 & & \\
+                                & Malica/e & 88 & & \\
+  \hline                                     
+\end{tabularx}
+
+Na dnevniku prehrane in vadbe je razvidno, da sem se treningov držal po planu, glede vnosa beljakovin pa sem sicer v povprečju zaužil $142g$ na dan, ampak sem jih v petek zauil le $117g$. Na splošno sem zadovoljen z rezultati v zvezi s sledenjem plana.
 
 Na spodnjem grafu je razvidno, kako se je spreminjalo število zgibov, ki sem jih opravil v enem poskusu, skozi 13 treningov.
 
@@ -104,7 +163,7 @@ Na spodnjem grafu je razvidno, kako se je spreminjalo število zgibov, ki sem ji
 \end{figure}
 
 \paragraph{}
-Iz grafa je razvidno, da je število opravljenih zgibov v enem poskusu naraščalo skoraj linearno, z manjšimi odstopanji.
+Iz grafa je razvidno, da je število opravljenih zgibov v enem poskusu naraščalo skoraj linearno, z manjšimi odstopanji, 20 zgibov pa sem dosegel že 10. trening.
 
 \begin{figure}[H]
     \centering
@@ -126,71 +185,27 @@ Slika \ref{fig:poraba-kalorij} pa prikazuje posnetek zaslona iz aplikacije Mi Fi
     \label{fig:poraba-kalorij}
 \end{figure}
 
-\subsection{Rezultati v zvezi s prehrano}
-
-\begin{center}
-  \textbf{\Large Tedenski plan vadbe}
-\end{center}
-
-\vspace{0.5cm}
-
-\begin{tabularx}{\textwidth}{|c|X|X|X|X|X|X|X|X|}
-  \hline
-  \textbf{Dan} & Ponedeljek & Torek & Sreda & Četrtek & Petek & Sobota & Nedelja \\
-  \hline
-  \textbf{Vsebina} & & & & & & & & \\
-  \hline
-\end{tabularx}
-
-\vspace{1cm}
-
-\textbf{\Large Dnevni plan prehrane in vadbe}
-
-\vspace{0.5cm}
-
-\begin{tabularx}{\textwidth}{|c|X|X|c|X|}
-  \hline
-  & \textbf{Obrok} & \textbf{Vnos kalorij} & \textbf{Vrsta in čas vadbe} & \textbf{Poraba kalorij} \\
-  \hline
-  \multirow{4}{*}{\textbf{Ponedeljek}} & Zajtrk & & & \\
-                                       & Kosilo & & & \\
-                                       & Večerja & & & \\
-                                       & Malica/e & & & \\
-  \hline
-  \multirow{4}{*}{\textbf{Torek}}      & Zajtrk & & & \\
-                                       & Kosilo & & & \\
-                                       & Večerja & & & \\
-                                       & Malica/e & & & \\
-  \hline
-  \multirow{4}{*}{\textbf{Sreda}}      & Zajtrk & & & \\
-                                       & Kosilo & & & \\
-                                       & Večerja & & & \\
-                                       & Malica/e & & & \\
-  \hline
-  \multirow{4}{*}{\textbf{Četrtek}}    & Zajtrk & & & \\
-                                       & Kosilo & & & \\
-                                       & Večerja & & & \\
-                                       & Malica/e & & & \\
-  \hline
-  \multirow{4}{*}{\textbf{Petek}}      & Zajtrk & & & \\
-                                       & Kosilo & & & \\
-                                       & Večerja & & & \\
-                                       & Malica/e & & & \\
-  \hline
-  \multirow{4}{*}{\textbf{Sobota}}     & Zajtrk & & & \\
-                                       & Kosilo & & & \\
-                                       & Večerja & & & \\
-                                       & Malica/e & & & \\
-  \hline
-  \multirow{4}{*}{\textbf{Nedelja}}    & Zajtrk & & & \\
-                                       & Kosilo & & & \\
-                                       & Večerja & & & \\
-                                       & Malica/e & & & \\
-  \hline                                     
-\end{tabularx}
-
 \section{Zaključek in sklepi}
 
+Plan prehrane in vadbe vsekakor ni bil optimalen, bil pa je zadosten, saj sem cilj seveda dosegel in celo presegel. Z rezultati sem zadovoljen. Ugotovil sem tudi, da trening na štangah pravzaprav ne porabi prav veliko kalorij, saj je povprečna intenzivnost nizka, pulz pa se dvigne le, ko dejansko opravljamo zgibe, med pavzo pa precej pade. 
+
 \section{Literatura in viri}
+
+\begin{itemize}
+  \item \textit{Mifflin-St Jeorjeva formula za izračun bazalnega metabolizma}: \\
+  \texttt{https://nutrium.com/blog/mifflin-st-jeor-for-nutrition-professionals}
+
+  \item \textit{Mi Fit aplikacija}: \\
+  \texttt{https://play.google.com/store/apps/details?id=com.xiaomi.wearable}
+
+  \item \textit{Google Calendar}: \\
+  \texttt{https://calendar.google.com/calendar}
+
+  \item \textit{My Fitness Pal}: \\
+  \texttt{https://www.myfitnesspal.com/}
+
+  \item \textit{Postavitev tabele - dnevnik prehrane in vadve}: \\
+  \texttt{Smernice za izdelavo seminarske.docx}
+\end{itemize}
 
 \end{document}
